--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">nurce</string>
+    <string name="app_name">nurse</string>
+    <string name="prompt">Select Doctor</string>
     <string name="title_activity_doctor">DoctorActivity</string>
     <string name="title_activity_addtest">Addtest</string>
     <string name="search_for_patient">Search for Patient...</string>
